infra/kubernetes/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: lets-travel
spec:
  selector:
    app.kubernetes.io/name: dashboard
  ports:
    - name: https
      port: 8443
      targetPort: https
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: lets-travel
spec:
  selector:
    app.kubernetes.io/name: identity
  ports:
    - name: https
      port: 8443
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  name: travel
  namespace: lets-travel
spec:
  selector:
    app.kubernetes.io/name: travel
  ports:
    - name: https
      port: 8443
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: lets-travel
spec:
  selector:
    app.kubernetes.io/name: payments
  ports:
    - name: https
      port: 8443
      targetPort: https
